--- a/app/assets/stylesheets/components/utility_bar.css
+++ b/app/assets/stylesheets/components/utility_bar.css
@@ -83,7 +83,7 @@
 }
 
 .c-utility-bar__link {
-  margin: auto;
+  margin: 0;
   background: none;
   border: none;
   cursor: pointer;
